fixed wrapping issues

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -27,6 +27,7 @@ body
   align-items: center
   justify-content: space-between
   padding: 2.5vh 7vw 2.5vh 7vw
+  flex-wrap: wrap
 
 .rowNarrow
   @extend .row
