--- a/app/styles/nav.sass
+++ b/app/styles/nav.sass
@@ -6,6 +6,7 @@
     background-color: $primary
     padding: 0
     z-index: 1
+    flex-wrap: nowrap
 
 #nav .row
     padding: 0
@@ -14,6 +15,7 @@
 #navLeft
     justify-content: flex-start
     align-items: center
+    flex-wrap: nowrap
 
 #nav .item .item
     padding: 0 15px 0 15px
@@ -25,6 +27,7 @@
 
 #navRight
     justify-content: flex-end
+    flex-wrap: nowrap
 
 .navLink
     text-decoration: none
